@@ -1,6 +1,7 @@
 WebHelpers ChangeLog
 
 0.2.1 (**svn**)
+* Updated Prototype to 1.5.0_rc1.
 * Updated radio_button so that id's are unique. Brings up to date with Rails
   changeset #4925, also fixes #103.
 * More precise distance_of_time_in_words (Follows bottom half of #4989 Rails
